@@ -1,0 +1,18 @@
+*.egg-info
+*.mo
+*.pyc
+*~
+.Python
+.coverage
+.installed.cfg
+.mr.developer.cfg
+bin/
+develop-eggs/
+downloads/
+eggs/
+htmlcov/
+parts/
+products/
+var/
+lib/
+include/
