@@ -1,0 +1,26 @@
+language: python
+python: 2.7
+env:
+  - PLONE_VERSION=4.3 QA=true
+  - PLONE_VERSION=5.0 QA=true
+  - PLONE_VERSION=5.1 QA=true
+matrix:
+  fast_finish: true
+install:
+  - sed -ie "s#test-4.3.x.cfg#test-$PLONE_VERSION.x.cfg#" buildout.cfg
+  - mkdir -p buildout-cache/downloads
+  - python bootstrap.py -c buildout.cfg
+  - bin/buildout -c buildout.cfg annotate
+  - bin/buildout -c buildout.cfg -N -q
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+script:
+  - test $QA bin/code-analysis && bin/zopepy setup.py check -mrs || true
+  - bin/test
+after_success:
+  - test $QA && bin/coverage.sh && pip install -q coveralls && coveralls || true
+after_failure:
+  - firefox -v
+notifications:
+  irc: irc.freenode.org#plone-testing
