@@ -1,12 +1,29 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
+
 package-name = collective.contentrules.comingsoon
+package-extras = [test]
 
 parts +=
     omelette
+    rebuild_i18n-sh
+
+[code-analysis]
+directory = ${buildout:directory}/src/collective/contentrules/comingsoon
+pre-commit-hook = False
+flake8-ignore = E501
+debug-statements = True
+deprecated-aliases = True
+imports = True
+prefer-single-quotes = True
+utf8-header = True
 
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
 
+[test]
+eggs +=
+    Products.PrintingMailHost
